sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: illegal start of simple pattern
    for (i<-0 to taille-2;i++){
                             ^AlgBubbleSort1:14: error: illegal start of simple expression
    }} 
     ^